添加四个判断是否日志级别启用的方法

--- a/test/test.html
+++ b/test/test.html
@@ -9,10 +9,15 @@
 <script src="../dist/js/js-log.min.js"></script>
 <script>
     jsLog.config({
+        level: 'debug',
         url: '/v1/sysmgr/log/c0002.json'
     });
 
     jsLog.debug('test');
+
+    if (jsLog.isDebugEnabled()) {
+        alert('isDebugEnabled === true');
+    }
 </script>
 </body>
 </html>
